--- a/main.html
+++ b/main.html
@@ -4,10 +4,31 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+        <h2 class="text-center mt-4 mb-4">Cards Gallery</h2>
+        <div class="row">
+            <!-- Card 1 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <a href="image1.jpg" data-lightbox="gallery">
+                        <img src="image1.jpg" class="card-img-top" alt="Image 1">
+                    </a>
+                    <div class="card-body text-center">
+                        <h6 class="card-title">Card 1</h6>
+                        <p class="card-text">Description for Card 1</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Add more cards here (Card 2 to Card 6) -->
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
