--- a/main.html
+++ b/main.html
@@ -14,19 +14,69 @@
         <h2 class="text-center mt-4 mb-4">Cards Gallery</h2>
         <div class="row">
             <!-- Card 1 -->
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <a href="image1.jpg" data-lightbox="gallery">
-                        <img src="image1.jpg" class="card-img-top" alt="Image 1">
+            <div class="col-md-4 d-flex">
+                <div class="card mb-4 cards">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" data-lightbox="gallery">
+                        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="card-img-top" alt="Image 1">
                     </a>
                     <div class="card-body text-center">
                         <h6 class="card-title">Card 1</h6>
                         <p class="card-text">Description for Card 1</p>
                     </div>
                 </div>
-            </div>
 
-            <!-- Add more cards here (Card 2 to Card 6) -->
+                <div class="card mb-4 cards">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" data-lightbox="gallery">
+                        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="card-img-top" alt="Image 1">
+                    </a>
+                    <div class="card-body text-center">
+                        <h6 class="card-title">Card 2</h6>
+                        <p class="card-text">Description for Card 2</p>
+                    </div>
+                </div>
+
+                <div class="card mb-4 cards">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" data-lightbox="gallery">
+                        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="card-img-top" alt="Image 1">
+                    </a>
+                    <div class="card-body text-center">
+                        <h6 class="card-title">Card 3</h6>
+                        <p class="card-text">Description for Card 3</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Card 4 -->
+            <div class="col-md-4 d-flex">
+                <div class="card mb-4 cards">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" data-lightbox="gallery">
+                        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="card-img-top" alt="Image 1">
+                    </a>
+                    <div class="card-body text-center">
+                        <h6 class="card-title">Card 4</h6>
+                        <p class="card-text">Description for Card 4</p>
+                    </div>
+                </div>
+				
+                <div class="card mb-4 cards">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" data-lightbox="gallery">
+                        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="card-img-top" alt="Image 1">
+                    </a>
+                    <div class="card-body text-center">
+                        <h6 class="card-title">Card 5</h6>
+                        <p class="card-text">Description for Card 5</p>
+                    </div>
+                </div>
+
+                <div class="card mb-4 cards">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" data-lightbox="gallery">
+                        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="card-img-top" alt="Image 1">
+                    </a>
+                    <div class="card-body text-center">
+                        <h6 class="card-title">Card 6</h6>
+                        <p class="card-text">Description for Card 6</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="./script.js">
