--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
             <!-- Card 1 -->
             <div class="col-md-4 d-flex">
                 <div class="card mb-4 cards">
-                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" data-lightbox="gallery">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="lightbox">
                         <img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="card-img-top" alt="Image 1">
                     </a>
                     <div class="card-body text-center">
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="card mb-4 cards">
-                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" data-lightbox="gallery">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="lightbox">
                         <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="card-img-top" alt="Image 1">
                     </a>
                     <div class="card-body text-center">
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="card mb-4 cards">
-                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" data-lightbox="gallery">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="lightbox">
                         <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="card-img-top" alt="Image 1">
                     </a>
                     <div class="card-body text-center">
@@ -48,7 +48,7 @@
             <!-- Card 4 -->
             <div class="col-md-4 d-flex">
                 <div class="card mb-4 cards">
-                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" data-lightbox="gallery">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="lightbox">
                         <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="card-img-top" alt="Image 1">
                     </a>
                     <div class="card-body text-center">
@@ -58,7 +58,7 @@
                 </div>
 				
                 <div class="card mb-4 cards">
-                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" data-lightbox="gallery">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="lightbox">
                         <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="card-img-top" alt="Image 1">
                     </a>
                     <div class="card-body text-center">
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="card mb-4 cards">
-                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" data-lightbox="gallery">
+                    <a href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="lightbox">
                         <img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="card-img-top" alt="Image 1">
                     </a>
                     <div class="card-body text-center">
